# _CPP_GAME_DEVELOPMENT_

./: .gitignore  README.md
002_CppCMake/: README.md
002_CppCMake/002_10_GenExpression/: CMakeLists.txt  License.txt  README.md
002_CppCMake/002_10_GenExpression/MathFunctions/: CMakeLists.txt  MathFunctions.h
002_CppCMake/002_11_ExportConfig/: CMakeLists.txt  README.md
002_CppCMake/002_11_ExportConfig/MathFunctions/: CMakeLists.txt  mysqrt.cxx
002_CppCMake/002_12_PackDebRel/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  TutorialConfig.h.in
002_CppCMake/002_12_PackDebRel/MathFunctions/: CMakeLists.txt  MakeTable.cxx
002_CppCMake/002_1_BasicStartingPoint/: CMakeLists.txt  README.md  README.project.md  tutorial.cxx
002_CppCMake/002_1_BasicStartingPoint/res/tmp/: CMakeLists.txt
002_CppCMake/002_1_BasicStartingPoint/res/tmp/projectName/src/: main.cpp
002_CppCMake/002_2_AddingLibrary/: CMakeList_withoutOptions.txt  CMakeLists.txt  README.md  TutorialConfig.h.in
002_CppCMake/002_2_AddingLibrary/MathFunctions/: CMakeLists.txt  mysqrt.cxx
002_CppCMake/002_2_AddingLibrary/res/tmp/CMakeAddingLibrary/src/: main.cpp
002_CppCMake/002_3_UsageReqForLib/: CMakeLists.txt  README.md  tutorial.cxx
002_CppCMake/002_3_UsageReqForLib/MathFunctions/: CMakeLists.txt
002_CppCMake/002_4_InstallAndTest/: CMakeLists.txt  README.md  tutorial.cxx
002_CppCMake/002_4_InstallAndTest/MathFunctions/: CMakeLists.txt  MathFunctions.h
002_CppCMake/002_5_SysIntrospection/: README.md
002_CppCMake/002_5_SysIntrospection/CMakeBasicStartingPoint/inc/: main.h
002_CppCMake/002_5_SysIntrospection/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
002_CppCMake/002_6_ComFileGen/: CMakeLists.txt  README.md
002_CppCMake/002_6_ComFileGen/MathFunctions/: CMakeLists.txt  MakeTable.cxx  MathFunctions.h  mysqrt.cxx
002_CppCMake/002_7_BuildInstall/: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in
002_CppCMake/002_8_Dashboard/: CMakeLists.txt  DartConfiguration.tcl.in  README.md
002_CppCMake/002_8_Dashboard/MathFunctions/: CMakeLists.txt
002_CppCMake/002_9_StaticShared/: CMakeLists.txt  CTestConfig.cmake  README.md  tutorial.cxx
002_CppCMake/002_9_StaticShared/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.h
003_1_CppOpenGL/: .gitignore  CMakeLists.txt  README.md  _MY_CMakeLists.txt  main.cpp
003_1_CppOpenGL/OpenGLGame/inc/: main.h
003_1_CppOpenGL/OpenGLGame/src/: main.cpp
003_1_CppOpenGL/engine/: CMakeLists.txt  _MY_CMakeLists.txt
003_1_CppOpenGL/engine/libs/GLEW/: CMakeLists.txt  Makefile
003_1_CppOpenGL/engine/libs/GLEW/src/: visualinfo.c
003_1_CppOpenGL/engine/libs/SDL2/: sdl-config.cmake
003_1_CppOpenGL/engine/src/: Engine.cpp  Engine.h
003_1_CppOpenGL_v2/: CMakeLists.txt  main.cpp
003_1_CppOpenGL_v2/Engine/: CMakeLists.txt
003_1_CppOpenGL_v2/Engine/libs/SDL2/: CMakeLists.txt
003_1_CppOpenGL_v2/Engine/libs/SDL2/include/: SDL_config.h.cmake  SDL_egl.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_keyboard.h  SDL_log.h  SDL_main.h  SDL_platform.h  SDL_render.h  SDL_revision.h  SDL_rwops.h  SDL_scancode.h  SDL_system.h  SDL_video.h  begin_code.h
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/audio/: SDL_wave.h
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/events/: SDL_mouse.c
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/hidapi/hidapi/: hidapi.h
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/joystick/: SDL_gamecontroller.c  SDL_sysjoystick.h  controller_type.h
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/joystick/hidapi/: SDL_hidapi_switch.c  SDL_hidapi_xboxone.c  SDL_hidapijoystick_c.h
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/joystick/iphoneos/: SDL_mfijoystick.m
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/render/direct3d/: SDL_render_d3d.c  SDL_shaders_d3d.c
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/render/direct3d11/: SDL_render_d3d11.c  SDL_shaders_d3d11.c
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/stdlib/: SDL_string.c
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/video/: SDL_bmp.c
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/video/khronos/EGL/: eglplatform.h
003_1_CppOpenGL_v2/Engine/libs/SDL2/src/video/khronos/vulkan/: vk_platform.h
003_1_CppOpenGL_v2/Engine/src/: Engine.cpp  Engine.hpp  EventsManager.cpp  EventsManager.hpp  Mesh.cpp  Mesh.hpp  MeshData.hpp  Node.cpp  Node.hpp  Renderer.hpp  ShaderProgram.hpp  Window.hpp
003_1_CppOpenGL_v2/Engine/src/GL/: GlHeaders.hpp  GlMesh.cpp  GlMesh.hpp  GlMorphProgram.cpp  GlMorphProgram.hpp  GlProgram.cpp  GlProgram.hpp  GlRenderer.cpp  GlRenderer.hpp
003_1_CppOpenGL_v2/Engine/src/SDL/: SdlMesh.cpp  SdlMesh.hpp  SdlMorphProgram.cpp  SdlMorphProgram.hpp  SdlRenderer.cpp  SdlRenderer.hpp  SdlShaderProgram.hpp  SdlWindow.cpp  SdlWindow.hpp
003_1_CppOpenGL_v2/Engine/src/Utils/: CppExt.hpp  KeyCodes.hpp  ProtectedVector.hpp
TEMPORARY/001_2_CppHWFunction/: CMakeLists.txt  main.cpp
TEMPORARY/001_2_CppHWPrintScan/: .gitignore  CMakeLists.txt
TEMPORARY/003_CppSDL_/: CMakeLists.txt
TEMPORARY/003_CppSDL_/engine/: CMakeLists.txt
TEMPORARY/003_CppSDL_/engine/src/: Engine.h
TEMPORARY/003_CppSDL_/src/: main.cpp  main.h
TEMPORARY/BuildCMakeGameSDL/Game/: main.cpp
TEMPORARY/BuildCMakeGameSDL/Game/Engine/: CMakeLists.txt
TEMPORARY/BuildCMakeGameSDL/Game/Engine/libs/SDL2/: WhatsNew.txt
TEMPORARY/BuildCMakeGameSDL/Game/Engine/src/: Engine.cpp  Engine.hpp
TEMPORARY/Test/: CMakeLists.txt
TEMPORARY/Test/TEST/: CMakeLists.txt
TEMPORARY/Test/TestFromRootScr/: CMakeLists.txt  main.cpp
TEMPORARY/untitled/: CMakeLists.txt
